--- a/report/tables/dow30_tickers.tex
+++ b/report/tables/dow30_tickers.tex
@@ -1,4 +1,7 @@
 \begin{longtable}{|p{2cm}|p{3cm}|p{4cm}|p{4cm}|}
+\caption{Constituents of the Dow Jones Industrial Average index as of April 2025. \cite{DowJones30}}
+\label{tab:dow30constituents}
+\\ 
 \hline
 \textbf{Symbol} & \textbf{Name} & \textbf{Sector} & \textbf{Industry} \\ \midrule
 \endfirsthead
@@ -40,6 +43,4 @@ UNH & UnitedHealth & Healthcare & Healthcare Plans \\ \hline
 V & Visa & Financial Services & Credit Services \\ \hline
 VZ & Verizon & Communication Services & Telecom Services \\ \hline
 WMT & Walmart & Consumer Defensive & Discount Stores \\ \hline
-\caption{Constituents of the Dow Jones Industrial Average index as of April 2025. \cite{WikipediaDowJones30}}
-\label{tab:dow30constituents}
 \end{longtable}
