--- a/report/tables/experiment_algorithms_sac.tex
+++ b/report/tables/experiment_algorithms_sac.tex
@@ -1,21 +1,21 @@
 \begin{longtable}{|l|p{2.1cm}|p{2.1cm}|p{2.1cm}|p{1.5cm}|p{2cm}|}
+    \caption{Algorithm comparison results for the SAC implementation across the different datasets under the indicators feature set.}
+    \label{tab:experiment_algorithms_sac}
+    \\ 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endfirsthead
 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endhead
 
     \endfoot
     \hline
 
-    \textbf{Dow Jones 30} & 0.1457 & 0.2243 & 0.1508 & 0.9769 & -0.1750 \\ \hline
+    \textbf{Dow Jones 30} & 0.2358 & 0.3793 & 0.1540 & 1.4521 & -0.1530 \\ \hline
     \textbf{Euro Stoxx 50} & 0.1761 & 0.2771 & 0.1520 & 1.1437 & -0.1718 \\ \hline
     \textbf{FTSE 100} & 0.1319 & 0.2048 & 0.1279 & 1.0326 & -0.1404 \\ \hline
     \textbf{Commodities} & 0.0027 & 0.0041 & 0.0480 & 0.0806 & -0.0704 \\ \hline
     \textbf{Currencies} & 0.2563 & 0.4044 & 0.1778 & 1.3727 & -0.1356 \\ \hline
-
-    \caption{Algorithm comparison results for the SAC implementation.}
-    \label{tab:experiment_algorithms_sac}
 \end{longtable}
