--- a/report/tables/experiment_algorithms_td3.tex
+++ b/report/tables/experiment_algorithms_td3.tex
@@ -1,10 +1,13 @@
 \begin{longtable}{|l|p{2.1cm}|p{2.1cm}|p{2.1cm}|p{1.5cm}|p{2cm}|}
+    \caption{Algorithm comparison results for the TD3 implementation across the different datasets under the indicators feature set.}
+    \label{tab:experiment_algorithms_td3}
+    \\ 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endfirsthead
 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endhead
 
     \endfoot
@@ -15,7 +18,4 @@
     \textbf{FTSE 100} & 0.1325 & 0.2058 & 0.1231 & 1.0729 & -0.1263 \\ \hline
     \textbf{Commodities} & 0.2768 & 0.4386 & 0.1792 & 1.4537 & -0.1224 \\ \hline
     \textbf{Currencies} & 0.0026 & 0.0038 & 0.0438 & 0.0807 & -0.0639 \\ \hline
-
-    \caption{Algorithm comparison results for the TD3 implementation.}
-    \label{tab:experiment_algorithms_td3}
 \end{longtable}
