--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -42,6 +42,15 @@
   url       = {https://arxiv.org/abs/1910.10045v2},
   year      = {2019}
 }
+@article{Bathaee2018TheAI,
+  title   = {The Artificial Intelligence Black Box and the Failure of Intent and Causation},
+  author  = {Yavar Bathaee},
+  journal = {Harvard Journal of Law \& Technology},
+  year    = {2018},
+  volume  = {31},
+  pages   = {889},
+  url     = {https://jolt.law.harvard.edu/assets/articlePDFs/v31/The-Artificial-Intelligence-Black-Box-and-the-Failure-of-Intent-and-Causation-Yavar-Bathaee.pdf}
+}
 @misc{BCSCodeConduct,
   author = {British Computer Society},
   title  = {BCS Code of Conduct},
@@ -198,6 +207,18 @@
   year      = {2025},
   publisher = {Harvard Business School Publishing Corporation}
 }
+@misc{DowJones30,
+  author  = {Financial Times},
+  journal = {Financial Times},
+  title   = {Dow Jones Industrial Average Constituents},
+  url     = {https://markets.ft.com/data/indices/tearsheet/constituents?s=DJI:DJI}
+}
+@misc{EuroStoxx50,
+  author  = {STOXX},
+  journal = {STOXX Website},
+  title   = {EURO STOXX 50 Index},
+  url     = {https://www.stoxx.com/document/Bookmarks/CurrentComponents/SX5GT.pdf}
+}
 @article{Falkner2018,
   abstract  = {Modern deep learning methods are very sensitive to many hyperparameters, and, due to the long training times of state-of-the-art models, vanilla Bayesian hyperparameter optimization is typically computationally infeasible. On the other hand, bandit-based configuration evaluation approaches based on random search lack guidance and do not converge to the best configurations as quickly. Here, we propose to combine the benefits of both Bayesian optimization and bandit-based methods, in order to achieve the best of both worlds: strong anytime performance and fast convergence to optimal configurations. We propose a new practical state-of-the-art hyperparameter optimization method, which consistently outperforms both Bayesian optimization and Hyperband on a wide range of problem types, including high-dimensional toy functions, support vector machines, feed-forward neural networks, Bayesian neural networks, deep reinforcement learning, and convolutional neural networks. Our method is robust and versatile, while at the same time being conceptually simple and easy to implement.},
   author    = {Stefan Falkner and Aaron Klein and Frank Hutter},
@@ -210,6 +231,15 @@
   volume    = {4},
   url       = {https://arxiv.org/abs/1807.01774v1},
   year      = {2018}
+}
+@techreport{FCA2018,
+  title       = {Algorithmic Trading Compliance in Wholesale Markets},
+  author      = {{Financial Conduct Authority}},
+  institution = {Financial Conduct Authority (FCA)},
+  year        = {2018},
+  url         = {https://www.fca.org.uk/publication/multi-firm-reviews/algorithmic-trading-compliance-wholesale-markets.pdf},
+  type        = {Technical Report},
+  address     = {London, UK}
 }
 @article{Francois-Lavet2018,
   abstract  = {Deep reinforcement learning is the combination of reinforcement learning (RL) and deep learning. This field of research has been able to solve a wide range of complex decision-making tasks that were previously out of reach for a machine. Thus, deep RL opens up many new applications in domains such as healthcare, robotics, smart grids, finance, and many more. This manuscript provides an introduction to deep reinforcement learning models, algorithms and techniques. Particular focus is on the aspects related to generalization and how deep RL can be used for practical applications. We assume the reader is familiar with basic machine learning concepts.},
@@ -224,6 +254,12 @@
   volume    = {11},
   url       = {http://arxiv.org/abs/1811.12560 http://dx.doi.org/10.1561/2200000071},
   year      = {2018}
+}
+@misc{FTSE100,
+  author  = {London Stock Exchange},
+  journal = {London Stock Exchange},
+  title   = {FTSE 100 Constituents },
+  url     = {https://www.londonstockexchange.com/indices/ftse-100/constituents/table}
 }
 @article{Fujimoto2018,
   abstract  = {In value-based reinforcement learning methods such as deep Q-learning, function approximation errors are known to lead to overestimated value estimates and suboptimal policies. We show that this problem persists in an actor-critic setting and propose novel mechanisms to minimize its effects on both the actor and the critic. Our algorithm builds on Double Q-learning, by taking the minimum value between a pair of critics to limit overestimation. We draw the connection between target networks and overestimation bias, and suggest delaying policy updates to reduce per-update error and further improve performance. We evaluate our method on the suite of OpenAI gym tasks, outperforming the state of the art in every environment tested.},
@@ -354,6 +390,23 @@
   url    = {https://www.theiet.org/about/governance/rules-of-conduct},
   year   = {2024}
 }
+@article{Jia2021,
+  abstract  = {In recent years, machine learning for trading has been widely studied. The direction and size of position should be determined in trading decisions based on market conditions. However, there is no research so far that considers variable position sizes in models developed for trading purposes. In this paper, we propose a deep reinforcement learning model named LSTM-DDPG to make trading decisions with variable positions. Specifically, we consider the trading process as a Partially Observable Markov Decision Process, in which the long short-term memory (LSTM) network is used to extract market state features and the deep deterministic policy gradient (DDPG) framework is used to make trading decisions concerning the direction and variable size of position. We test the LSTM-DDPG model on IF300 (index futures of China stock market) data and the results show that LSTM-DDPG with variable positions performs better in terms of return and risk than models with fixed or few-level positions. In addition, the investment potential of the model can be better tapped by the reward function of the differential Sharpe ratio than that of profit reward function.},
+  author    = {Zhichao Jia and Qiang Gao and Xiaohong Peng},
+  doi       = {10.3390/S21196571},
+  issn      = {14248220},
+  issue     = {19},
+  journal   = {Sensors (Basel, Switzerland)},
+  keywords  = {Deep reinforcement learning,Reward function,Trading strategy,Variable positions},
+  month     = {10},
+  pages     = {6571},
+  pmid      = {34640890},
+  publisher = {MDPI},
+  title     = {LSTM-DDPG for Trading with Variable Positions},
+  volume    = {21},
+  url       = {https://pmc.ncbi.nlm.nih.gov/articles/PMC8512099/},
+  year      = {2021}
+}
 @article{Jiang2016,
   abstract  = {Portfolio management is the decision-making process of allocating an amount of fund into different financial investment products. Cryptocurrencies are electronic and decentralized alternatives to government-issued money, with Bitcoin as the best-known example of a cryptocurrency. This paper presents a model-less convolutional neural network with historic prices of a set of financial assets as its input, outputting portfolio weights of the set. The network is trained with 0.7 years' price data from a cryptocurrency exchange. The training is done in a reinforcement manner, maximizing the accumulative return, which is regarded as the reward function of the network. Backtest trading experiments with trading period of 30 minutes is conducted in the same market, achieving 10-fold returns in 1.8 months' periods. Some recently published portfolio selection strategies are also used to perform the same back-tests, whose results are compared with the neural network. The network is not limited to cryptocurrency, but can be applied to any other financial markets.},
   author    = {Zhengyao Jiang and Jinjun Liang},
@@ -375,6 +428,16 @@
   pages  = {8},
   title  = {Mean Variance Portfolio Theory},
   url    = {https://www.kent.ac.uk/learning/documents/slas-documents/mean-variance-portfolio.pdf}
+}
+@article{Kiran2022,
+  abstract = {Reinforcement learning (RL) applications, where an agent can simply learn optimal behaviors by interacting with the environment, are quickly gaining tremendous success in a wide variety of applications from controlling simple pendulums to complex data centers. However, setting the right hyperparameters can have a huge impact on the deployed solution performance and reliability in the inference models, produced via RL, used for decision-making. Hyperparameter search itself is a laborious process that requires many iterations and computationally expensive to find the best settings that produce the best neural network architectures. In comparison to other neural network architectures, deep RL has not witnessed much hyperparameter tuning, due to its algorithm complexity and simulation platforms needed. In this paper, we propose a distributed variable-length genetic algorithm framework to systematically tune hyperparameters for various RL applications, improving training time and robustness of the architecture, via evolution. We demonstrate the scalability of our approach on many RL problems (from simple gyms to complex applications) and compared with Bayesian approach. Our results show that with more generations, optimal solutions that require fewer training episodes and are computationally cheap while being more robust for deployment. Our results are imperative to advance deep reinforcement learning controllers for real-world problems.},
+  author   = {Mariam Kiran and Melis Ozyildirim},
+  keywords = {deep RL,evolutionary approaches,hyperparameter tuning},
+  month    = {1},
+  title    = {Hyperparameter Tuning for Deep Reinforcement Learning Applications},
+  url      = {https://arxiv.org/abs/2201.11182v1},
+  year     = {2022},
+  journal  = {arXiv preprint arXiv:2201.11182}
 }
 @article{Lei2020,
   abstract  = {Algorithmic trading is a continuous perception and decision making problem, where environment perception requires to learn feature representation from highly non-stationary and noisy financial time series, and decision making requires the algorithm to explore the environment and simultaneously make correct decisions in an online manner without any supervised information. To address these two problems, we propose a time-driven feature-aware jointly deep reinforcement learning model (TFJ-DRL) that integrates deep learning model and reinforcement learning model to improve the financial signal representation learning and action decision making in algorithmic trading. Concretely, we learn the environmental representation by adaptively selecting and re-weighting various features of financial signals and summarize the attention values between historical information and changing trend depending on the current state. Besides, the supervised deep learning and reinforcement learning are jointly and iteratively trained to make full use of the supervised signals in the training data, and obtain more update information and stricter loss function constraints, thereby increasing investment returns. TFJ-DRL is evaluated on real-world financial data with different price trends (rising, falling and no obvious direction). A series of analysis show the robust superiority and the extensive applicability of the proposed method.},
@@ -435,6 +498,15 @@
   title     = {FinRL: A Deep Reinforcement Learning Library for Automated Stock Trading in Quantitative Finance},
   url       = {https://papers.ssrn.com/abstract=3737257},
   year      = {2020}
+}
+@article{Louppe2014,
+  abstract = {Data analysis and machine learning have become an integrative part of the modern scientific methodology, offering automated procedures for the prediction of a phenomenon based on past observations, unraveling underlying patterns in data and providing insights about the problem. Yet, caution should avoid using machine learning as a black-box tool, but rather consider it as a methodology, with a rational thought process that is entirely dependent on the problem under study. In particular, the use of algorithms should ideally require a reasonable understanding of their mechanisms, properties and limitations, in order to better apprehend and interpret their results. Accordingly, the goal of this thesis is to provide an in-depth analysis of random forests, consistently calling into question each and every part of the algorithm, in order to shed new light on its learning capabilities, inner workings and interpretability. The first part of this work studies the induction of decision trees and the construction of ensembles of randomized trees, motivating their design and purpose whenever possible. Our contributions follow with an original complexity analysis of random forests, showing their good computational performance and scalability, along with an in-depth discussion of their implementation details, as contributed within Scikit-Learn. In the second part of this work, we analyse and discuss the interpretability of random forests in the eyes of variable importance measures. The core of our contributions rests in the theoretical characterization of the Mean Decrease of Impurity variable importance measure, from which we prove and derive some of its properties in the case of multiway totally randomized trees and in asymptotic conditions. In consequence of this work, our analysis demonstrates that variable importances [...].},
+  author   = {Gilles Louppe},
+  month    = {7},
+  title    = {Understanding Random Forests: From Theory to Practice},
+  url      = {https://arxiv.org/abs/1407.7502v3},
+  year     = {2014},
+  journal  = {arXiv preprint arXiv:1407.7502v3}
 }
 @article{Lundberg2017,
   abstract  = {Understanding why a model makes a certain prediction can be as crucial as the prediction's accuracy in many applications. However, the highest accuracy for large modern datasets is often achieved by complex models that even experts struggle to interpret, such as ensemble or deep learning models, creating a tension between accuracy and interpretability. In response, various methods have recently been proposed to help users interpret the predictions of complex models, but it is often unclear how these methods are related and when one method is preferable over another. To address this problem, we present a unified framework for interpreting predictions, SHAP (SHapley Additive exPlanations). SHAP assigns each feature an importance value for a particular prediction. Its novel components include: (1) the identification of a new class of additive feature importance measures, and (2) theoretical results showing there is a unique solution in this class with a set of desirable properties. The new class unifies six existing methods, notable because several recent methods in the class lack the proposed desirable properties. Based on insights from this unification, we present new methods that show improved computational performance and/or better consistency with human intuition than previous approaches.},
@@ -868,6 +940,13 @@
   url    = {https://www.wandb.com/},
   author = {Biewald, Lukas}
 }
+@misc{WANDBSweep,
+  author = {Weights & Biases Documentation},
+  month  = {8},
+  title  = {Sweep configuration options },
+  url    = {https://docs.wandb.ai/guides/sweeps/sweep-config-keys/},
+  year   = {2025}
+}
 @misc{WeightsBiases2025,
   author  = {Weights & Biases},
   journal = {Documentation},
@@ -875,27 +954,6 @@
   title   = {Stable Baselines 3 | Weights \& Biases Documentation},
   url     = {https://docs.wandb.ai/guides/integrations/stable-baselines-3/},
   year    = {2025}
-}
-@misc{WikipediaDowJones30,
-  author = {Wikipedia},
-  month  = {7},
-  title  = {Dow Jones Industrial Average - Wikipedia},
-  url    = {https://en.wikipedia.org/wiki/Dow_Jones_Industrial_Average},
-  year   = {2025}
-}
-@misc{WikipediaEuroStoxx50,
-  author = {Wikipedia},
-  month  = {7},
-  title  = {EURO STOXX 50 - Wikipedia},
-  url    = {https://en.wikipedia.org/wiki/EURO_STOXX_50},
-  year   = {2025}
-}
-@misc{WikipediaFtse100,
-  author = {Wikipedia},
-  month  = {8},
-  title  = {FTSE 100 Index - Wikipedia},
-  url    = {https://en.wikipedia.org/wiki/FTSE_100_Index},
-  year   = {2025}
 }
 @article{Wu2017,
   abstract  = {In this work, we propose to apply trust region optimization to deep reinforcement learning using a recently proposed Kronecker-factored approximation to the curvature. We extend the framework of natural policy gradient and propose to optimize both the actor and the critic using Kronecker-factored approximate curvature (K-FAC) with trust region; hence we call our method Actor Critic using Kronecker-Factored Trust Region (ACKTR). To the best of our knowledge, this is the first scalable trust region natural gradient method for actor-critic methods. It is also a method that learns non-trivial tasks in continuous control as well as discrete control policies directly from raw pixel inputs. We tested our approach across discrete domains in Atari games as well as continuous domains in the MuJoCo environment. With the proposed methods, we are able to achieve higher rewards and a 2- to 3-fold improvement in sample efficiency on average, compared to previous state-of-the-art on-policy actor-critic methods. Code is available at https://github.com/openai/baselines},
