--- a/report/tables/default_test_results.tex
+++ b/report/tables/default_test_results.tex
@@ -1,25 +1,25 @@
 \begin{longtable}{|p{2cm}|p{2.1cm}|p{2.1cm}|p{2.1cm}|p{1.5cm}|p{2cm}|}
+    \caption{Results of hyper-parameter tuning on the test dataset.}
+    \label{tab:test_results}
+    \\ 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endfirsthead
 
     \hline
-    \textbf{Algorithm / Benchmark} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Algorithm / Benchmark} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endhead
 
     \endfoot
     \hline
 
-        \textbf{A2C} & 0.2598 & 0.1679 & 0.1968 & 0.8859 & -0.2186 \\ \hline
-        \textbf{PPO} & 0.3375 & 0.2158 & 0.1697 & 1.2364 & -0.1630 \\ \hline
-        \textbf{DDPG} & 0.3494 & 0.2231 & 0.1763 & 1.2300 & -0.1684 \\ \hline
-        \textbf{TD3} & 0.3401 & 0.2174 & 0.1731 & 1.2227 & -0.1598 \\ \hline
-        \textbf{SAC} & 0.2659 & 0.1717 & 0.1762 & 0.9866 & -0.1825 \\ \hline
-        \textbf{Mean} & 0.1503 & 0.0989 & 0.1896 & 0.5923 & -0.1972 \\ \hline
-        \textbf{Min} & 0.3609 & 0.2308 & 0.1681 & 1.3193 & -0.1559 \\ \hline
-        \textbf{Momentum} & 0.1635 & 0.1074 & 0.1868 & 0.6396 & -0.2025 \\ \hline
-        \textbf{Equal} & 0.3123 & 0.2010 & 0.1758 & 1.1290 & -0.1762 \\ \hline
-
-    \caption{Results of hyper-parameter tuning on the test dataset.}
-    \label{tab:test_results}
+    \textbf{A2C} & 0.1679 & 0.2598 & 0.1968 & 0.8859 & -0.2186 \\ \hline
+    \textbf{PPO} & 0.2158 & 0.3375 & 0.1697 & 1.2364 & -0.1630 \\ \hline
+    \textbf{DDPG} & 0.2231 & 0.3494 & 0.1763 & 1.2300 & -0.1684 \\ \hline
+    \textbf{TD3} & 0.2174 & 0.3401 & 0.1731 & 1.2227 & -0.1598 \\ \hline
+    \textbf{SAC} & 0.1717 & 0.2659 & 0.1762 & 0.9866 & -0.1825 \\ \hline
+    \textbf{Mean} & 0.0989 & 0.1503 & 0.1896 & 0.5923 & -0.1972 \\ \hline
+    \textbf{Min} & 0.2308 & 0.3609 & 0.1681 & 1.3193 & -0.1559 \\ \hline
+    \textbf{Momentum} & 0.1074 & 0.1635 & 0.1868 & 0.6396 & -0.2025 \\ \hline
+    \textbf{Equal} & 0.2010 & 0.3123 & 0.1758 & 1.1290 & -0.1762 \\ \hline
 \end{longtable}
