--- a/report/tables/experiment_algorithms_a2c.tex
+++ b/report/tables/experiment_algorithms_a2c.tex
@@ -1,21 +1,21 @@
 \begin{longtable}{|l|p{2.1cm}|p{2.1cm}|p{2.1cm}|p{1.5cm}|p{2cm}|}
+    \caption{Algorithm comparison results for the A2C implementation across the different datasets under the indicators feature set.}
+    \label{tab:experiment_algorithms_a2c}
+    \\ 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endfirsthead
 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endhead
 
     \endfoot
     \hline
 
-    \textbf{Dow Jones 30} & 0.2165 & 0.3387 & 0.1579 & 1.3203 & -0.1649 \\ \hline
+    \textbf{Dow Jones 30} & 0.2229 & 0.3491 & 0.1483 & 1.4307 & -0.1510 \\ \hline
     \textbf{Euro Stoxx 50} & 0.1467 & 0.2293 & 0.1549 & 0.9617 & -0.1667 \\ \hline
     \textbf{FTSE 100} & 0.1052 & 0.1623 & 0.1268 & 0.8520 & -0.1409 \\ \hline
     \textbf{Commodities} & 0.2353 & 0.3694 & 0.2041 & 1.1372 & -0.1512 \\ \hline
     \textbf{Currencies} & -0.0011 & -0.0017 & 0.0462 & -0.0018 & -0.0665 \\ \hline 
-
-    \caption{Algorithm comparison results for the A2C implementation.}
-    \label{tab:experiment_algorithms_a2c}
 \end{longtable}
