--- a/report/tables/experiment_algorithms_ppo.tex
+++ b/report/tables/experiment_algorithms_ppo.tex
@@ -1,10 +1,13 @@
 \begin{longtable}{|l|p{2.1cm}|p{2.1cm}|p{2.1cm}|p{1.5cm}|p{2cm}|}
+    \caption{Algorithm comparison results for the PPO implementation across the different datasets under the indicators feature set.}
+    \label{tab:experiment_algorithms_ppo}
+    \\ 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endfirsthead
 
     \hline
-    \textbf{Dataset} & \textbf{Cumulative return} & \textbf{Annualised return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endhead
 
     \endfoot
@@ -15,7 +18,4 @@
     \textbf{FTSE 100} & 0.1246 & 0.1931 & 0.1244 & 1.0063 & -0.1315 \\ \hline
     \textbf{Commodities} & 0.2531 & 0.3990 & 0.1941 & 1.2600 & -0.1522 \\ \hline
     \textbf{Currencies} & -0.0011 & -0.0017 & 0.0493 & 0.0014 & -0.0726 \\ \hline
-
-    \caption{Algorithm comparison results for the PPO implementation.}
-    \label{tab:experiment_algorithms_ppo}
 \end{longtable}
